makko/default/immich/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "photos.senk0.com"
  rules:
    - backendRefs:
        - name: immich
          port: 2283
